<resources>
    <string name="app_name">PlayMeet</string>
    <string name="default_web_client_id">your_web_client_id</string>
    <string name="login">Login</string>
    <string name="loginButton">Log in</string>
    <string name="Email">example@email.com</string>
    <string name="Password">Enter your password</string>
    <string name="providePassword">Enter password</string>
    <string name="logoutSuccessful">You have successfully logged out</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="confirmPasswordAgain">Confirm password again</string>
    <string name="registerButton">Register</string>
    <string name="clickToLogin">Log in</string>
    <string name="clickToRegister">Create account</string>
    <string name="loginSuccessful">Logged in</string>
    <string name="errorWhileLoggingIn">Login error: </string>
    <string name="verifyEmail">Please verify your email address before logging in</string>
    <string name="userDoNotExists">User does not exist</string>
    <string name="authError">Authentication error </string>
    <string name="passwordReset">Password reset</string>
    <string name="provideEmail">enter email</string>
    <string name="passwordResetNow">Reset your password</string>
    <string name="passwordResetLinkSent">Password reset link has been sent to you email address</string>
    <string name="errorWhileSendingLink">Error sending link</string>
    <string name="emailIsRequired">Email is required</string>
    <string name="registerError">Registration error</string>
    <string name="registerSuccessfulEmailSent">Registration success. Verification email has been sent.</string>
    <string name="registerSuccessfulBut">Registration success, but </string>
    <string name="wrongFormat">Invalid format</string>
    <string name="passwordDoNotMatch">Passwords does not match to each other</string>
    <string name="passwordRequirements">The password must contain at least one uppercase letter, one lowercase letter, one number and one special character and must be at least 8 characters long</string>
    <string name="errorWhileDownloadingUserData">Error retrieving user data</string>
    <string name="provideYourAge">Choose your age</string>
    <string name="errorWhileEncryption">Data encryption error</string>
    <string name="onlyForLoggedInUsers">Only for registered users</string>
    <string name="nickNameRequirements">The username should be between </string>
    <string name="nickNameRequirements2"> and </string>
    <string name="nickNameRequirements3"> characters</string>
    <string name="nickNameRequirements4">The username can only contain letters and numbers</string>
    <string name="nickNameTaken">The username is taken</string>
    <string name="provideNewNickName">Enter a user name</string>
    <string name="editNickNameTitle">Change your username</string>
    <string name="nickNameSaved">Username saved successfully</string>
    <string name="errorWhileSavingNickName">Saving username error</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="read">Read</string>
    <string name="newMessages">New messages</string>
    <string name="youHaveNewMessages">You have new messages</string>
    <string name="message">Message</string>
    <string name="messageFrom">Message from: </string>
    <string name="openAppForMoreInfo">Enter the app for more details.</string>
    <string name="someoneRegisteredToYourPost">Someone joined your activity!</string>
    <string name="notificationsTurnedOff">Notifications will not appear.</string>
    <string name="weNeedYourConsent">Consent to notifications</string>
    <string name="weNeedYourConsentForNotifications">The app needs your consent to send notifications to inform you about new messages.</string>
    <string name="noThanks">No, thank you</string>
    <string name="doNotShowAgain">Do not show again</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="chooseImageSource">Choose image source</string>
    <string name="deleteAvatar">Delete Avatar</string>
    <string name="addPhoto">Add avatar</string>
    <string name="avatarSaved">Avatar saved</string>
    <string name="difficultyCase1">First time</string>
    <string name="difficultyCase2">Novice</string>
    <string name="difficultyCase3">Beginner</string>
    <string name="difficultyCase4">Amateur</string>
    <string name="difficultyCase5">Intermediate</string>
    <string name="difficultyCase6">Advanced</string>
    <string name="difficultyCase7">Experienced</string>
    <string name="difficultyCase8">Veteran</string>
    <string name="difficultyCase9">Expert</string>
    <string name="difficultyCase10">Professional</string>
    <string name="postsCreatingLimitReached">You have reached your limit of 3 posts. Make room for new ones by removing one of the old ones.</string>
    <string name="fillAllNeededFields">Complete required fields</string>
    <string name="postCreated">Post created!</string>
    <string name="errorWhileCreatingPost">Error while creating post</string>
    <string name="provideCorrectNumber">Please enter the correct number of people</string>
    <string name="provideNumberOfPeople">Enter the number of people</string>
    <string name="provideCorrectSport">Select sport</string>
    <string name="provideCorrectDifficulty">Select level</string>
    <string name="provideCorrectCityOrChooseFromTheList">Enter correct city or select from list</string>
    <string name="safetyPasswordCheck">Confirm account deletion</string>
    <string name="passwordCanNotBeEmpty">Password cannot be empty</string>
    <string name="errorWhileRemovingAccount">An error occurred. Contact the developer</string>
    <string name="accountRemoved">Profile successfully deleted</string>
    <string name="toOftenSubmitting">Submitting too often</string>
    <string name="errorWhileSending">An error occurred while sending</string>
    <string name="opinionSent">Opinion has been sent!</string>
    <string name="reportPost">Report Post</string>
    <string name="reportText">Report content</string>
    <string name="reportSent">Report sent</string>
    <string name="sendAnOpinion">Share your opinion!</string>
    <string name="whatToWriteAsOpinion">Write what you think about the application, what features would be appreciated, what errors you encountered</string>
    <string name="send">Send</string>
    <string name="giveOpinion">Share your opinion</string>
    <string name="sendAnEmail">Or write to e-mail</string>
    <string name="myEmail">support@playmeet.eu</string>
    <string name="copyEmail">Copy email</string>
    <string name="reportingToOften">Reporting too often</string>
    <string name="providePostID">Post ID:</string>
    <string name="provideInfo">Info:</string>
    <string name="provideDate">Date:</string>
    <string name="provideHour">Time:</string>
    <string name="provideName">Name:</string>
    <string name="provideGender">Gender:</string>
    <string name="provideCity">City:</string>
    <string name="provideNick">Nick:</string>
    <string name="provideSports">Sports:</string>
    <string name="provideAboutYou">About me:</string>
    <string name="provideAge">Age:</string>
    <string name="sport">Sport</string>
    <string name="city">City</string>
    <string name="gameDifficulty">Game level</string>
    <string name="postID">Post ID</string>
    <string name="writePostID">Enter post ID…</string>
    <string name="itIsYourPost">It is your post!</string>
    <string name="postDeleted">Post deleted</string>
    <string name="errorWhileDeletingPost">Error while deleting post </string>
    <string name="limitForPostsRegisteredReached">You have reached your limit of saved activities</string>
    <string name="errorWhileDownloadingPostData">Failed to download post information</string>
    <string name="postDoNotExists">The selected post does not exist</string>
    <string name="fieldCantBeEmpty">Field cannot be empty</string>
    <string name="errorWhileCheckingPostsLimit">Error while checking post limit</string>
    <string name="errorWhileSingingUp">Error saving</string>
    <string name="userAlreadyRegisteredIntoActivity">You are already registered for this activity</string>
    <string name="userRegistered">Saved</string>
    <string name="userUnregistered">You have been unregistered!</string>
    <string name="errorWhileRemovingRegistration">Error removing registration</string>
    <string name="doYouReallyWantToDeletePost">Are you sure you want to delete this post?</string>
    <string name="activityIsFull">Saved user limit reached</string>
    <string name="signMeIn">I want to join!</string>
    <string name="nickname">Username</string>
    <string name="postsAddedByYou">Favorites</string>
    <string name="postsSavedByYou">Saved posts</string>
    <string name="createPostButtonLogo">+</string>
    <string name="choose_city_string_from_spinner">Choose city</string>
    <string name="chooseGenderForSpinner">Select gender</string>
    <string name="cancelButtonString">Cancel</string>
    <string name="nextStep">Next</string>
    <string name="step1of3">Step 1 of 3</string>
    <string name="step2of3">Step 2 of 3</string>
    <string name="step3of3">Step 3 of 3</string>
    <string name="saveProvidedValues">Save data</string>
    <string name="noGenderChosenError">Select gender</string>
    <string name="setUpProfileFirstTime">Set profile in 3 steps</string>
    <string name="chat">Chat</string>
    <string name="informationAboutProvidedData">The information provided is visible to everyone!</string>
    <string name="nicknameIsEmpty">No nickname set</string>
    <string name="Save">Save</string>
    <string name="Edit">Edit</string>
    <string name="openChat">Chat</string>
    <string name="userDidNotProvided">Not provided</string>
    <string name="moreInfoAboutGame">More about the game</string>
    <string name="moreInfoAboutUser">About the organizer</string>
    <string name="noPostFound">No posts found</string>
    <string name="loadingMorePosts">Loading posts</string>
    <string name="resetFilters">Clear filters</string>
    <string name="clear">Clear</string>
    <string name="filters">Filters</string>
    <string name="filterPosts">Filter posts</string>
    <string name="noPostCreated">You have not created any posts</string>
    <string name="noPostSaved">You have not signed up yet</string>
    <string name="continueAsGuest">Continue as guest</string>
    <string name="signOutFromThePost">Unsubscribe</string>
    <string name="postModel">Creating a post</string>
    <string name="chooseHour">Choose hour\n(optional)</string>
    <string name="howManyPeopleNeeded">Number of people needed</string>
    <string name="extraInfo">Additional information (optional)</string>
    <string name="chooseDate">Choose date\n(optional)</string>
    <string name="noSportProvided">No sport provided</string>
    <string name="timeStamp">Timestamp</string>
    <string name="username">Username</string>
    <string name="provideCityHint">Enter city name</string>
    <string name="add">Add</string>
    <string name="closePrivacyInfoWindow">Close current window</string>
    <string name="close">Close</string>
    <string name="howWeHandlePrivacy">At PlayMeet, we focus on user security and privacy, using tools from Google. Thanks to this, we guarantee secure login and protection of users\' personal data through encryption. </string>
    <string name="start">Start</string>
    <string name="menu">Menu</string>
    <string name="you">You</string>
    <string name="onboardingDiscussDetails">Discuss the details</string>
    <string name="onboardingCommunicateWIthOthers">By communicating with others</string>
</resources>