<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="20dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/closePrivacyDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/ripple_effect"
        android:contentDescription="@string/closePrivacyInfoWindow"
        android:padding="5dp"
        android:src="@drawable/icon_close"
        android:text="@string/close" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fillViewport="true">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/MyAppCompatTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="6dp"
            android:padding="5dp"
            android:text="@string/howWeHandlePrivacy"
            android:textAlignment="center"
            android:textColor="@color/accent"
            android:textSize="18sp" />
    </ScrollView>

</FrameLayout>