<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="50dp"
            android:text="@string/sendAnOpinion"
            android:textColor="@color/accent"
            android:textSize="25sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textWithOpinion"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="10dp"
            android:background="@color/secondary20"
            android:gravity="start"
            android:hint="@string/whatToWriteAsOpinion"
            android:inputType="textMultiLine"
            android:maxLength="500"
            android:padding="20dp"
            android:textColorHint="@color/textHint"
            android:textSize="20sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/backToMainMenu"
                style="@style/MyButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:text="@string/menu" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sendOpinion"
                style="@style/MyButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:text="@string/send" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/sendAnEmail"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/myEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/myEmail"
                android:textColor="@color/accent"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/copyButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@color/text"
                android:contentDescription="@string/copyEmail"
                android:scaleType="fitCenter"
                android:src="@drawable/copy_image" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <include layout="@layout/navigation_view_side_panel" />

</androidx.drawerlayout.widget.DrawerLayout>