<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainMenuLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/updateUserInfoBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background_button"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:inputType="none"
        android:minHeight="60dp"
        android:text="@string/setUpProfileFirstTime"
        android:textColor="@color/text"
        android:textSize="13sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:visibility="gone" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerActivePosts"
        android:name="com.noisevisionproductions.playmeet.postsManagement.allPostsManagement.PostsOfTheGamesFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_container"
        app:defaultNavHost="true"
        tools:layout="@layout/fragment_all_posts_list" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#15171f"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/showAllPostsMenu"
            style="@style/MainMenuButtonsStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/selector_home"
            android:text="@string/start"
            android:textColor="@color/selector_text_menu_icons" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/yourPostsMenu"
            style="@style/MainMenuButtonsStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/selector_user_posts"
            android:gravity="center"
            android:text="@string/postsAddedByYou"
            android:textColor="@color/selector_text_menu_icons" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createPostMenu"
            style="@style/MainMenuButtonsStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/selector_add_post"
            android:text="@string/add"
            android:textColor="@color/selector_text_menu_icons" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/chatRoomMenu"
            style="@style/MainMenuButtonsStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/selector_chat"
            android:text="@string/chat"
            android:textColor="@color/selector_text_menu_icons" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/userProfileMenu"
            style="@style/MainMenuButtonsStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/selector_user_account"
            android:text="@string/you"
            android:textColor="@color/selector_text_menu_icons" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>
