<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/messageSentLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/message_sent_background"
    android:orientation="horizontal"
    android:padding="10dp">

    <include
        layout="@layout/avatar_image_view"
        android:layout_width="50dp"
        android:layout_height="50dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/usernameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:typeface="serif" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/messageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textColor="@color/text"
            android:typeface="serif" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/timestampTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/timeStamp"
        android:textColor="@color/text"
        android:typeface="serif" />

</androidx.appcompat.widget.LinearLayoutCompat>
