<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <include
        android:id="@+id/include"
        layout="@layout/alpha_version_info" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context=".LoginRegister.LoginAndRegisterActivity">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/MyAppCompatTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/MyAppCompatTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/e_mail"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/MyAppCompatTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/MyAppCompatTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/haslo"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/MyAppCompatTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:maxEms="32"
                android:minEms="6"
                android:textSize="20sp"
                app:passwordToggleEnabled="true"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck, NewApi" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            style="@style/MyButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:text="@string/loginButton" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/continueAsGuest"
            style="@style/MyAppCompatTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="kontunuuj jako gość"
            android:textSize="15sp"
            android:textStyle="italic" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>