<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cityFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:orientation="vertical"
        android:padding="5dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/stepNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/step2of3"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <!--nazwa miasta-->
        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/cityTextField"
            style="@style/MyAutoCompleteTextViewStyleForFirstSetup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/provideCityHint"
            android:imeOptions="actionDone"
            android:inputType="textAutoComplete"
            android:maxLength="50"
            android:minHeight="60dp"
            android:popupBackground="@drawable/rounded_menu_background_for_spinner"
            android:textSize="15sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <include layout="@layout/button_cancel" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/setCity"
                style="@style/MyButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:text="@string/nextStep" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>
